# enum_dict

./: Cargo.toml  README.md
enum_dict/: Cargo.toml  README.md
enum_dict/src/: dict_key.rs  lib.rs  optional_dict.rs  required_dict.rs
enum_dict/tests/: test.rs
enum_dict_derive/: Cargo.toml  README.md
enum_dict_derive/src/: case.rs  lib.rs
