[package]
name = "enum_dict"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Shigma <shigma10826@gmail.com>"]
description = ""
repository = "https://github.com/shigma/enum-dict"
documentation = "https://docs.rs/enum-dict"

[features]
default = ["derive"]
derive = ["dep:enum_dict_derive"]
full = ["derive", "serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
enum_dict_derive = { version = "0.1.0", path = "../enum_dict_derive", optional = true }

[dev-dependencies]
serde_json = "1.0"
enum_dict = { path = ".", features = ["full"] }
